koru-manifests/api-celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koru-api-worker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koru-api-worker
  template:
    metadata:
      labels:
        app: koru-api-worker
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: koru-api-worker
          image: "ghcr.io/jamdon2/koru-api:sha-b969751"
          command: ["celery"]
          args:
            [
              "-A",
              "api.core.celery",
              "worker",
              "--loglevel=info",
              "-P",
              "gevent",
            ]
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1"
