koru-manifests/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koru-email
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koru-email
  template:
    metadata:
      labels:
        app: koru-email
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: koru-email
          image: "ghcr.io/jamdon2/koru-email:sha-fdbe0ff"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
