koru-manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koru-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koru-web
  template:
    metadata:
      labels:
        app: koru-web
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: koru-web
          image: "ghcr.io/jamdon2/koru-web:sha-a6d110b"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "2"
