koru-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koru-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik # For k3s default Traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - koru.jamdon2.dev
      secretName: koru-tls-secret # Cert-manager will create this
  rules:
    - host: koru.jamdon2.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: koru-api-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: koru-web-svc
                port:
                  number: 80
